// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Load component Home 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="main-body"
          data-testid="home"
        >
          <div
            class="main"
            data-testid="login"
          >
            <div
              class="title"
            >
              Employee Polls
            </div>
            <div
              class="logo"
            >
              <img
                class="img"
                src="image.jpg"
              />
            </div>
            <div
              class="form"
            >
              <div
                class="form-title"
              >
                Login
              </div>
              <div
                class="form-user"
              >
                <span
                  class="form-user-text"
                >
                  User
                </span>
                <input
                  class="text-user"
                  data-testid="username"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="form-password"
              >
                <span
                  class="form-password-text"
                >
                  Password
                </span>
                <input
                  class="text-password"
                  data-testid="password"
                  type="password"
                  value=""
                />
              </div>
              <button
                class="btn-submit"
                data-testid="submit"
              >
                Submit
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="main-body"
        data-testid="home"
      >
        <div
          class="main"
          data-testid="login"
        >
          <div
            class="title"
          >
            Employee Polls
          </div>
          <div
            class="logo"
          >
            <img
              class="img"
              src="image.jpg"
            />
          </div>
          <div
            class="form"
          >
            <div
              class="form-title"
            >
              Login
            </div>
            <div
              class="form-user"
            >
              <span
                class="form-user-text"
              >
                User
              </span>
              <input
                class="text-user"
                data-testid="username"
                type="text"
                value=""
              />
            </div>
            <div
              class="form-password"
            >
              <span
                class="form-password-text"
              >
                Password
              </span>
              <input
                class="text-password"
                data-testid="password"
                type="password"
                value=""
              />
            </div>
            <button
              class="btn-submit"
              data-testid="submit"
            >
              Submit
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Home Load component New 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="new"
      >
        <div
          class="new-title"
        >
          Would You Rather
        </div>
        <div
          class="description"
        >
          <p>
            Create your own poll
          </p>
        </div>
        <div
          class="first-option"
        >
          <span
            class="first-option-text"
          >
            First Option
          </span>
          <input
            class="text-first-option"
            type="text"
            value=""
          />
        </div>
        <div
          class="second-option"
        >
          <span
            class="second-option-text"
          >
            Second Option
          </span>
          <input
            class="text-second-option"
            type="text"
            value=""
          />
        </div>
        <button
          class="btn-submit"
        >
          Submit
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="new"
    >
      <div
        class="new-title"
      >
        Would You Rather
      </div>
      <div
        class="description"
      >
        <p>
          Create your own poll
        </p>
      </div>
      <div
        class="first-option"
      >
        <span
          class="first-option-text"
        >
          First Option
        </span>
        <input
          class="text-first-option"
          type="text"
          value=""
        />
      </div>
      <div
        class="second-option"
      >
        <span
          class="second-option-text"
        >
          Second Option
        </span>
        <input
          class="text-second-option"
          type="text"
          value=""
        />
      </div>
      <button
        class="btn-submit"
      >
        Submit
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
